--- a/architecture.ini
+++ b/architecture.ini
@@ -7,6 +7,7 @@ ground = [['L72'], ['L1'], ['L2'], ['L3'], ['L4'], ['L7'], ['L8'], ['L9'], ['L10
 type = ['BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'LX', 'LA', 'LA', 'LA', 'PX', 'PV', 'PV', 'PV', 'PX', 'PV', 'PV', 'PV', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'PX', 'PV', 'PV', 'PV', 'PX', 'PV', 'PV', 'PV', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'MX', 'MV', 'MV', 'MV', 'MV', 'MV', 'MV', 'MV', 'MV', 'MV', 'MV', 'MV', 'MV', 'MV', 'MV', 'MV', 'MV']
 appendageregion = 46 # 11?
 appendagenode = 62
+appendagelmindex = 5449 # index in the atlas of an estimated appendage node
 
 # region 11 is appendage
 # region 15 is LSPV
@@ -26,6 +27,7 @@ ground = [['N43'], ['L70'], ['L1'], ['L2'], ['L3'], ['L4'], ['L7'], ['L8'], ['L9
 type = ['BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'LX', 'LA', 'LA', 'LA', 'PX', 'PV', 'PV', 'PV', 'PX', 'PV', 'PV', 'PV', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'PX', 'PV', 'PV', 'PV', 'PX', 'PV', 'PV', 'PV', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'BS', 'MX', 'MV', 'MV', 'MV', 'MV', 'MV', 'MV', 'MV', 'MV', 'MV', 'MV', 'MV', 'MV', 'MV', 'MV', 'MV', 'MV']
 appendageregion = 48 # 12?
 appendagenode = 60
+appendagelmindex = 5449 # index in the atlas of an estimated appendage node
 
 # region 12 is appendage
 # region 16 is LSPV
